Trying to take care of the image just issue on mobile

--- a/src/css/welcome.css
+++ b/src/css/welcome.css
@@ -64,6 +64,8 @@
     justify-content: center;
     align-items: center;
     filter: grayscale(40%);
+
+    transition: height 999999s;
 }
 
 .parallax_1 span{
@@ -89,6 +91,8 @@
     justify-content: center;
     align-items: center;
     filter: grayscale(40%);
+
+    transition: height 999999s;
 }
 
 .parallax_2 span{
@@ -114,6 +118,8 @@
     justify-content: center;
     align-items: center;
     filter: grayscale(40%);
+
+    transition: height 999999s;
 }
 
 .parallax_3 span{
